# stixflayer

./: .gitignore  .gitlab-ci.yml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STATUS.md  plan_extensions_dict.md  plan_lang_country_validation.md  plan_sco_from_json.md
.cargo/: config.toml
.github/workflows/: ci.yml  python.yml
data/stix/: bundle.json
data/stix/meta/: extension-definition.json  language-content.json  marking-definition.json
data/stix/patterns/: basic.json  compound.json  qualifiers.json
data/stix/scos/: artifact.json  autonomous-system.json  directory.json  domain-name.json  email-address.json  email-message.json  file.json  ipv4-addr.json  ipv6-addr.json  mac-addr.json  mutex.json  network-traffic.json  process.json  software.json  url.json  user-account.json  windows-registry-key.json  x509-certificate.json
data/stix/sdos/: attack-pattern.json  campaign.json  course-of-action.json  grouping.json  identity.json  incident.json  indicator.json  infrastructure.json  intrusion-set.json  location.json  malware-analysis.json  malware.json  note.json  observed-data.json  opinion.json  report.json  threat-actor.json  tool.json  vulnerability.json
data/stix/sros/: relationship.json  sighting.json
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/rust_stix2/: all.html  index.html  sidebar-items.js
docs/rust_stix2/base/: enum.BuilderType.html  enum.StixObject.html  index.html  sidebar-items.js  struct.CommonProperties.html  struct.CommonPropertiesBuilder.html  trait.Stix.html
docs/rust_stix2/bundles/: index.html  struct.Bundle.html
docs/rust_stix2/custom_objects/: index.html  sidebar-items.js  struct.CustomObject.html  struct.CustomObjectBuilder.html
docs/rust_stix2/cyber_observable_objects/: index.html  sidebar-items.js
docs/rust_stix2/datastore/: enum.DataSinkType.html  enum.DataSourceType.html  index.html  sidebar-items.js  struct.DataSink.html  struct.DataSource.html  struct.DataStore.html
docs/rust_stix2/domain_objects/: index.html  sidebar-items.js
docs/rust_stix2/error/: enum.StixError.html  fn.add_error.html  fn.return_multiple_errors.html  index.html  sidebar-items.js
go/: go.mod
go/stixflayer/: builder.go  builder_test.go  plugin.go
java/: pom.xml
node/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
node/src/: lib.rs
node/tests/: basic.test.ts
python/: Cargo.toml  pyproject.toml  stixflayer.pyi
python/src/: conftest.py  lib.rs
python/src/stixflayer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: test_custom.py  test_meta.py  test_new_features.py  test_scos.py  test_sdos.py  test_sros.py  utils.py
rust/: Cargo.toml
rust/src/: base.rs  bundles.rs  custom_objects.rs  error.rs  extensions.rs  json.rs  lib.rs  object.rs  types.rs
stix/: Cargo.toml
stix/src/: lib.rs
stix/src/cyber_observable_objects/: tests.rs
stix/src/datastore/: filesystem.rs
stix/src/domain_objects/: sdo.rs  vocab.rs
stix/src/meta_objects/: extension_definition.rs  language_content.rs  tests.rs
stix/src/pattern/: expr.rs
wasm-plugin/: Cargo.toml
wasm-plugin/src/: lib.rs
(+323 files in other folders)
