[package]
name = "stixflayer-node"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib"]
name = "stixflayer"

[dependencies]
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stixflayer = { path = "../rust", default-features = false }

[profile.release]
lto = true
opt-level = "s"
strip = true