[package]
name = "stixflayer-python"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
name = "stixflayer_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
stixflayer = { path = "../rust", features = ["pyo3"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.3"
ordered-float = "4.4"
paste = "1.0"

[build-dependencies]
maturin = "1.0"
