[package]
name = "rust-stix2"
version = "0.1.0"
edition = "2021"

[dependencies]
addr = "0.15.6"
base64 = "0.22.1"
convert_case = "0.7.1"
email_address = "0.2"
hex = "0.4.3"
identyhash = "0.1.0"
iptools = "0.3.0"
jiff = { version = "0.1.13", features = ["serde"] }
json-canon = "0.1.3"
language-tags = "0.3.2"
log = "0.4.22"
nom = "8.0.0"
nom-language = "0.1.0"
ordered-float = { version = "4.4.0", features = ["serde"] }
pathbuf = "1.0.0"
pcre2 = "0.2.9"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde-this-or-that = "0.5.0"
serde-value = "0.7.0"
serde_with = "3.9.0"
strum = { version = "0.26.3", features = ["derive"] }
rust_iso3166 = "0.1.13"
test-log = "0.2.16"
tlsh = "0.1.0"
thiserror = "2.0.3"
uuid = { version = "1.10.0", features = [
    "v4", "v5", "fast-rng", "macro-diagnostics", "serde"
] }
url = { version = "2.5.2", features = ["serde"] }
