[package]
name = "stix-wasm-plugin"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
stixflayer = { path = "../rust", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

[target.wasm32-wasi.dependencies]